small copywriting change

--- a/covid/templates/covid/index.html
+++ b/covid/templates/covid/index.html
@@ -45,7 +45,7 @@ Covid Charts
     <p>My simplified application means that often indeterminate stages are 
     mis-categorized. If a location doesn't have a clear peak yet, it is 
     probably Early/Indeterminate, regardless of the color.</p>
-    <p>I take a "doubtful" approach to categorization, meaning that I expect the data 
+    <p>I took a "doubtful" approach to categorization, meaning that I expect the data 
     for the last 14 days is more likely to get worse than better. So if the last reliable
     data point is higher than the last 14 days' data, it's used for the categorization.
     Otherwise, the highest point in the last 14 days is used.
